# cpp-stratego-happy-vampires

./: Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Display.cpp  Display.h  Game.cpp  Game.h  Piece.cpp  Piece.h  README.md  Texture.cpp  Texture.h  main.cpp
Pieces/: Barrier.hpp  Bomb.hpp  Flag.hpp  Miner.hpp  Piece.cpp  Piece.h  Scout.hpp  Soldier.cpp  Soldier.h  Spy.hpp  Thing.hpp
